Improved parsing results